Sat Jun 25 23:45:42 BST 2005  Olly Betts <olly@survex.com>

	* api/omdatabase.cc: Tweak get_lastdocid() code to be a little
	  clearer.

Wed Jun 22 20:50:43 BST 2005  Olly Betts <olly@survex.com>

	* configure.ac,include/xapian/version.h.in,include/xapian/version_h.cc,
	  include/Makefile.am: Eliminate use of "ln -s" when generating
	  include/xapian/version.h since it seems to cause problems on Solaris
	  in some setups and isn't really necessary.  Also add dependency
	  mechanism so version.h gets regenerated when the template is
	  changed.

Wed Jun 22 18:47:05 BST 2005  Olly Betts <olly@survex.com>

	* docs/intro_ir.html: Citeseer has moved, so update link.

Mon Jun 20 13:33:42 BST 2005  Olly Betts <olly@survex.com>

	* configure.ac: -Wshadow causes false positives with GCC 3.0.4, so
	  only enable it for 3.1 and up.

Mon Jun 20 03:09:07 BST 2005  Olly Betts <olly@survex.com>

	* queryparser/queryparser.lemony: "utilpy" -> "utility"!

Fri Jun 17 19:54:44 BST 2005  Olly Betts <olly@survex.com>

	* COPYING: Update FSF address.

Thu Jun 16 18:43:33 BST 2005  Olly Betts <olly@survex.com>

	* backends/flint/flint_table.cc: Fix warnings from older GCC versions.
	* backends/flint/flint_lock.cc: '#include <signal.h>' so that SIGHUP
	  gets defined reliably.

Thu Jun 16 17:54:39 BST 2005  Olly Betts <olly@survex.com>

	* bin/Makefile.am,bin/xapian-compact.cc: Added new "xapian-compact"
	  program which can compact and merge flint databases in a similar
	  way to how quartzcompact does for quartz databases.

Thu Jun 16 01:22:45 BST 2005  Olly Betts <olly@survex.com>

	* configure.ac: Check for spaces in build directory, source directory,
	  or install prefix and die with a helpful message.

Wed Jun 15 01:00:11 BST 2005  Olly Betts <olly@survex.com>

	* backends/flint/flint_lock.cc: It seems we need to explicitly kill
	  the child process.  Otherwise when we have two databases locked
	  just closing the connection doesn't cause the child to die.  I